[gd_scene load_steps=7 format=3 uid="uid://bedd05f10cn6n"]

[ext_resource type="Script" path="res://scripts/next_world_portal.gd" id="1_3pth3"]
[ext_resource type="Texture2D" uid="uid://hoqy8frbfg1q" path="res://assets/sprites/Tilemap.png" id="2_jrd65"]
[ext_resource type="FontFile" uid="uid://ce33c3yvuo3tf" path="res://assets/fonts/Fonts/m3x6.ttf" id="3_u3sha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq24t"]
size = Vector2(96, 79)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gjw1d"]
texture = ExtResource("2_jrd65")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_0t416"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gjw1d")

[node name="NextWorldPortal" type="Node2D"]
z_index = 2
script = ExtResource("1_3pth3")

[node name="TeleportZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportZone"]
position = Vector2(0, -40.5)
shape = SubResource("RectangleShape2D_yq24t")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_0t416")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 0, 10, -262143, 0, 10, -65534, 0, 10, -196611, 0, 10, -3, 196608, 9, -262146, 131072, 9, -262145, 131072, 10, -196606, 196608, 9, -327679, 0, 10, -131071, 131072, 9, -1, 131072, 10, -131075, 131072, 10, -131073, 131072, 10, -262144, 65536, 10, -65535, 131072, 10, -196610, 131072, 9, -65538, 65536, 10, -131072, 65536, 10, -327680, 65536, 10, -196607, 65536, 10, -131070, 65536, 10, -196608, 131072, 9, -65536, 131072, 9, -262142, 131072, 9, -196609, 131072, 10, -65539, 131072, 9, -131074, 196608, 9, -2, 131072, 9, -327678, 131072, 9, -262147, 131072, 9, -196612, 0, 9, -262148, 0, 9, -327683, 0, 9, -327682, 0, 9, -327681, 0, 9, -393216, 0, 9, -393215, 0, 9, -393214, 0, 9, -327677, 0, 9, -262141, 0, 9, 65533, 0, 9, 65534, 0, 9, 65535, 0, 9, 0, 0, 9, 1, 0, 9, 2, 0, 9, 65532, 0, 9, 3, 0, 9, -393213, 0, 9, -327684, 0, 9, -131069, 196608, 9, -65540, 196608, 9, -4, 131072, 10, -65533, 131072, 10, -196605, 0, 10, -131076, 0, 10)
layer_1/tile_data = PackedInt32Array(-327684, 65536, 11, -393213, 131072, 11, -327683, 0, 11, -327682, 0, 11, -327681, 0, 11, -393216, 0, 11, -393215, 0, 11, -393214, 0, 11, -327677, 196608, 10, -262141, 196608, 10, -262148, 196608, 10, -196612, 196608, 10, 65532, 0, 11, 65533, 0, 11, 65534, 0, 11, 65535, 0, 11, 0, 0, 11, 1, 0, 11, 2, 0, 11, 3, 0, 11)

[node name="NextWorldButton" type="Button" parent="."]
visible = false
offset_left = -15.0
offset_top = -77.0
offset_right = 15.0
offset_bottom = -54.0

[node name="RichTextLabel" type="RichTextLabel" parent="NextWorldButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 45.0
offset_bottom = 21.0
theme_override_fonts/normal_font = ExtResource("3_u3sha")
bbcode_enabled = true
text = "[wave]Enter"

[connection signal="body_entered" from="TeleportZone" to="." method="_on_teleport_zone_body_entered"]
[connection signal="body_exited" from="TeleportZone" to="." method="_on_teleport_zone_body_exited"]
[connection signal="pressed" from="NextWorldButton" to="." method="_on_next_world_button_pressed"]
